plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'org.sonarqube' version '4.4.1.3373'
	id 'jacoco'
}

group = 'com.knockoutticket'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	//	implementation group: 'jakarta.mail', name: 'jakarta.mail-api', version: '2.1.3'
	//	implementation 'com.sun.mail:jakarta.mail:2.0.0'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.springfox:springfox-boot-starter:3.0.0'
	implementation 'mysql:mysql-connector-java:8.0.27'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation "org.mockito:mockito-core:3.+"
}

test {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	reports {
		xml.required = true
	}
}


sonar {
	properties {
		property "sonar.projectKey", "I516431_knockout-ticket_e081aed6-8032-46d6-828a-a1ea7d72e48d"
		property "sonar.projectName", "KnockoutTicket Backend"
		property "sonar.qualitygate.wait", true
		property "sonar.host.url", "http://localhost:9000"
		property "sonar.token", "sqp_b5d27caddb52f33aeb52ce3bcaac34f42cb27038"
	}
}


